--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Eduardo/Library/Application Support/NetBeans/7.2/build.properties
+user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
