--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/Asteroids.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.core.jar=/Applications/Processing.app/Contents/Java/core/library/core.jar
+file.reference.core.jar-1=C:\\Users\\Alex\\Desktop\\TUT\\Software Engineering Methodology\\Processing\\core\\library\\core.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core.jar}
+    ${file.reference.core.jar}:\
+    ${file.reference.core.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
