--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ file.reference.core.jar-1=C:\\Users\\Alex\\Desktop\\TUT\\Software Engineering Me
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core.jar}:\
-    ${file.reference.core.jar-1}
+    ${file.reference.core.jar-1}:\
+    ${file.reference.core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
