--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.core.jar-1=C:\\Users\\Alex\\Desktop\\TUT\\Software Engineering Methodology\\Processing\\core\\library\\core.jar
 user.properties.file=C:\\Users\\Alex\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
